--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.91",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
+    "@types/react-input-mask": "^3.0.5",
+    "@types/vanilla-masker": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "vanilla-masker": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
